clippath fixes

--- a/css/style.css
+++ b/css/style.css
@@ -125,7 +125,11 @@ iframe {
   justify-content: center;
   align-items: center;
   margin-top: 2rem;
-  margin-bottom: 1rem; }
+  margin-bottom: 1rem;
+  font-size: 2rem; }
+  @media screen and (max-width: 60rem) {
+    .map-box {
+      margin: 0; } }
   .map-box__content {
     width: 70%; }
 
@@ -464,7 +468,7 @@ iframe {
   height: auto;
   position: relative;
   justify-content: center;
-  margin-bottom: 5rem; }
+  margin-bottom: 3rem; }
 
 .main div {
   width: 70%;
@@ -522,6 +526,7 @@ iframe {
   align-items: center;
   padding: 10rem 0;
   margin-bottom: 3rem;
+  background-color: #7bd078;
   background-image: linear-gradient(to right, rgba(187, 231, 178, 0.9), rgba(11, 121, 11, 0.7));
   clip-path: polygon(0 0, 100% 0.73%, 100% 100%, 0 99.27%); }
 
@@ -531,8 +536,8 @@ iframe {
   justify-content: center;
   align-items: center;
   padding: 10rem 0;
-  margin-bottom: 4rem;
-  clip-path: polygon(0 0, 100% 7vh, 100% 100%, 0% 100%);
+  margin-bottom: 6rem;
+  clip-path: polygon(0 0, 100% 3.85%, 100% 100%, 0% 96.15%);
   background-color: #7bd078;
   background-image: linear-gradient(to right, rgba(187, 231, 178, 0.9), rgba(11, 121, 11, 0.7)); }
 
@@ -543,7 +548,7 @@ iframe {
   padding: 4.5rem;
   margin: auto 0;
   min-height: 25rem;
-  width: 60vw;
+  width: 70vw;
   border-radius: 3px;
   box-shadow: 0 1.2rem 4rem rgba(0, 0, 0, 0.15);
   text-align: center;
@@ -572,7 +577,6 @@ iframe {
       .ohje-box__img {
         width: 25rem; } }
   .ohje-box__text-container {
-    margin-left: 2rem;
     margin-bottom: 3rem;
     width: 100%; }
   .ohje-box__text {
