--- a/sass/pages/_reitit.scss
+++ b/sass/pages/_reitit.scss
@@ -4,7 +4,7 @@
   height: auto;
   position: relative;
   justify-content: center;
-  margin-bottom: 5rem;
+  margin-bottom: 3rem;
 }
 .main div{
   width: 70%;
@@ -74,6 +74,7 @@
   align-items: center;
   padding: 10rem 0;
   margin-bottom: 3rem;
+  background-color: #7bd078;
   background-image: linear-gradient(to right, rgba(187, 231, 178, 0.9), rgba(11, 121, 11, 0.7));
   clip-path: polygon(0 0, 100% 0.73%, 100% 100%, 0 99.27%);
 }
