--- a/sass/pages/_testi.scss
+++ b/sass/pages/_testi.scss
@@ -6,7 +6,7 @@
   //background-color: white;
   padding: 10rem 0;
   margin-bottom: 6rem;
-  clip-path: polygon(0 0, 100% 7vh, 100% 100%, 0% 93%);
+  clip-path: polygon(0 0, 100% 3.85%, 100% 100%, 0% 96.15%);
   background-color: #7bd078;
   background-image: linear-gradient(
                   to right,
